# morobox8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  gulpfile.js  index.html  morobox8.d.ts  morobox8.js  morobox8.wasm  morobox8_config.h.in  moronet8.js  moronet8.wasm  moronet8_config.h.in  package.json
.github/workflows/: CI.yml  gh-pages.yml
bios/: bank0.lua
cart/: bank0.lua
cmake/Modules/: ConfigureChecks.cmake
gh-pages/: index.html
include/: cart.h  morobox8.h  morobox8_config.h  morobox8_defines.h  morobox8_hooks.h  morobox8_limits.h  morobox8_types.h  moronet8.h  moronet8_config.h  moronet8_defines.h  moronet8_limits.h  moronet8_types.h
include/api/: api.h  api_lang.h  api_type.h  js_api.h  lua_api.h
include/filesystem/: filesystem.h  filesystem_hooks.h
include/network/: masterserver.h  packet.h  relayserver.h  session_hooks.h  session_state.h
include/player/: fs_storage.h  main.h
include/system/: log_hooks.h  reader_hooks.h  storage_hooks.h
include/tool/: info.h  pack.h  packer.h  unpacker.h
src/: cart.c  morobox8.c  morobox8.ts  morobox8_hooks.c  moronet8.c  pack.c
src/api/: api.c  api_macro.h  js_api.c  lua_api.c
src/filesystem/: filesystem.c  filesystem_hooks.c
src/network/: lws.c  masterserver.c  packet.c  relayserver.c  serveremu.c  session.c  session_hooks.c
src/player/: fs_filesystem.c  fs_reader.c  fs_storage.c  lws_session.c  main.c  main_info.c  main_pack.c  main_run.c  main_unpack.c  posix_hooks.c  sdl2.c  session.c
src/system/: log_hooks.c  reader_hooks.c  storage_hooks.c
src/tool/: info.c  pack.c  packer.c  packer_code.c  packer_png.c  unpacker.c
tests/: CMakeLists.txt  test_cart.c  test_config.h  test_moronet8.c  test_packer.c  test_unpacker.c
tests/data/cart/: game.lua
tests/expected/: 256k_cart.txt  64k_cart.txt  data_dir_cart.txt  data_dir_cart_full.txt  empty_cart.txt  one_code_chunk_cart.txt  one_font_chunk_cart.txt  one_tileset_chunk_cart.txt
